# ai-code-battle

./: .env.example  .gitignore  .needle-predispatch-sha  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  MATCH_LIST_TEST_RESULTS.md  MATCH_LIST_VERIFICATION_SUMMARY.md  PROGRESS.md  R2_ACCESS_KEY_SOURCE.md  README.md  REPLAY_VIEWER_TEST_RESULTS.md  REPLAY_VIEWER_VERIFICATION_SUMMARY.md  docker-compose.bots.yml  docker-compose.workers.yml  go.mod  go.sum  wrangler.toml
bots/phalanx/: Cargo.toml  Dockerfile
bots/phalanx/src/: game.rs  main.rs  strategy.rs
docs/: phase6-deployment-checklist.md  wasm-bot-interface.md
engine/: auth.go  auth_test.go  bot_http.go  bot_http_test.go  bot_local.go  bot_strategies.go  bot_strategies_phase13.go  determinism_test.go  game.go  grid.go  grid_test.go  integration_test.go  match.go  replay.go  thumbnail.go  turn.go  turn_test.go  types.go  winprob.go
manifests/: acb-api-deployment.yml  acb-build.yml  acb-eventsensor.yml  acb-evolved-bot-deploy-workflowtemplate.yml  acb-evolver-deployment.yml  acb-index-builder-deployment.yml  acb-matchmaker-deployment.yml  acb-metrics-monitoring.yml  acb-worker-deployment.yml
metrics/: metrics.go  metrics_test.go
ratelimit/: ratelimit.go  ratelimit_test.go
scripts/: build-wasm.sh  cloudflare-setup.sh  configure-dns.sh  deploy-pages.sh  setup-r2.sh  verify-deployment.sh
web/: CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  app.html  embed.html  index.html  package-lock.json  package.json  pages.json  test-match-list.js  test-real-replay.js  test-replay-viewer.html  tsconfig.json  vite.config.ts  (+1 more)
(+406 files in other folders)
