[package]
name = "phalanx-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
